spacing fixes and sharing

--- a/src/app/main/lesson-view/lesson-view.page.scss
+++ b/src/app/main/lesson-view/lesson-view.page.scss
@@ -1,14 +1,11 @@
 .title-section {
 
-    h4 {
-        padding-bottom:0;
-        margin-bottom:2;
-        margin-top:6%;
-        font-variant: small-caps;
-        color:var(--ion-color-secondary);
-    }
+  
     h1 {
-        margin-top:0;
+        padding-bottom:0;
+        margin-bottom:10%;
+        margin-top:6%;
+        font-weight: bold;
     }
 }
 
